project/stage/tests/accept/empty_functions/w_params/single_param/float_func_boolean_param.ul
float _O_123456789 (boolean as_2394dkKJD) { }
