project/stage/tests/reject/bad_statements/bad_assignments/aggregate_types/missing_semicolon.ul
float VOID() {
    id [false]= 
    1
}
